@@ -17,6 +17,7 @@
     </select>
     <input type="checkbox" value="0"/>
     <input type="radio" value="Milk"/>
+    <input type="file"/>
     <div>
       page-object rocks!
     </div>
@@ -31,7 +32,7 @@
     </table>
     <img src="images/circle.png"/>
     <p>This is a paragraph.</p>
-    
+
     <h1>h1's are cool</h1>
     <h2>h2's are cool</h2>
     <h3>h3's are cool</h3>
