@@ -4,6 +4,13 @@ module Druid
       def self.finders
         super + [:title]
       end
+
+      #
+      # Set the value of the FileField
+      #
+      def value=(new_value)
+        element.set(new_value)
+      end
     end
   end
 end
